--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,16 +1,8 @@
+@import "./constants.css";
+
 body{
-
-    /*Fonts*/
-
-    --default-sans-serif-font:'Montserrat';
-    --default-serif-font:'Arvo';
-    
-    /*Colors*/
-
-    
-
-
-
     font-family: var(--default-sans-serif-font),Arial,sans-serif !important;
-
+    margin: 0px;
+    border: 0px;
+    padding: 0px;
 }
