--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,3 +28,7 @@ body{
 .productSideBarEntry .collapse{
     font-size: 1.2em;
 }
+#productListingContainer .pagination li a{
+    margin-top: auto;
+    font-size: 1.5em;
+}
