--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,3 +32,9 @@ body{
     margin-top: auto;
     font-size: 1.5em;
 }
+.productSideBarEntry{
+    border-style: solid;
+    border-top:0px;
+    border-left: 0px;
+    border-right: 0px;
+}
