--- a/src/css/style.css
+++ b/src/css/style.css
@@ -38,3 +38,27 @@ body{
     border-left: 0px;
     border-right: 0px;
 }
+
+.logo{
+    width: 10em;
+    height: 10em;
+}
+
+header.navbar{
+    background-color: var(--color-background-dark-blue) !important;
+}
+#navbarSearchContainer{
+    margin-left: 5em;
+}
+#headerSearchIcon{
+    color: red;
+}
+#myAccountIcon{
+    color: red;
+    font-size: 1.5em;
+    margin-right: 2em;
+}
+#shoppingCartIcon{
+    color: red;
+    font-size: 1.5em;
+}
