--- a/src/styles/constants.css
+++ b/src/styles/constants.css
@@ -15,6 +15,7 @@
     
     /*interactive*/
     --color-interactive-orange:#EB9D16;
+    --color-interactive-orange2:#E0920B;
     --color-interactive-red-fail:#FF5A5F;
     --color-interactive-green-success:#2cc36d;
     
