Sidebar not done

--- a/src/css/constants.css
+++ b/src/css/constants.css
@@ -23,4 +23,6 @@
       --color-background-dark-blue:#15303A;
       /*Main background*/
       --color-background-white:#EDF1F2;
+      /*Sidebar background*/
+      --color-background-full-white:#f5f9fa;
 }
