--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,6 +32,10 @@ footer#footerGeneric{
 header.navbar{
     background-color: var(--color-background-dark-blue) !important;
 }
+#sidebar{
+    height: 100vh;
+    background-color: var(--color-background-full-white);
+}
 #headerSearchIcon{
     color: var(--color-interactive-orange);
     font-size: 1.5rem;
@@ -50,7 +54,6 @@ header.navbar{
     background-color: var(--color-interactive-orange);
     border-style: none;
 }
-
 #headerSellButton {
     background-color: var(--color-interactive-orange);
     border-style: none;
