--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -72,7 +72,7 @@ header.navbar{
     max-width: 15em;
     max-width: 15em;
 }
-/* HOMEPAGE buttons css */ 
+/* buttons css */ 
 .btn-orange {
     background-color: var(--color-interactive-orange);
 }
