--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -74,8 +74,12 @@ header.navbar{
     background-color:var(--color-background-dark-blue) !important;
 }
 .gameListItem{
-    max-width: 30em;
-    max-width: 30em;
+    max-width: 15em;
+    max-width: 15em;
+}
+.card-img-top{
+    max-width: 15em;
+    max-width: 15em;
 }
 /* HOMEPAGE buttons css */ 
 .btn-orange {
