--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -18,7 +18,7 @@ body{
     position: relative;
 }
 #content{
-    padding-bottom: 20%;
+    padding-bottom: 20rem;
 }
 footer#footerGeneric{
     width: 100%;
