--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -79,7 +79,6 @@ header.navbar{
 .card-img-top{
     max-width: 15em;
 }
-
 /* buttons css */ 
 .btn-orange {
     background-color: var(--color-interactive-orange);
@@ -87,7 +86,6 @@ header.navbar{
 .btn-orange:hover {
     background-color: var(--color-interactive-orange2);
 }
-
 /* color css */
 .cl-orange {
     color: var(--color-interactive-orange);
@@ -110,7 +108,6 @@ header.navbar{
 .cl-white {
     color: var(--color-background-white);
 }
-
 /* backgrounds css */
 .bg-orange {
     background-color: var(--color-interactive-orange);
@@ -127,7 +124,6 @@ header.navbar{
 .bg-white {
     background-color: var(--color-background-white);
 }
-
 /* cards css */
 .card {
     border-radius: 0;
@@ -142,3 +138,13 @@ header.navbar{
     -moz-box-shadow: 0px 0px 25px 13px rgba(105,105,105,0.69);
     box-shadow: 0px 0px 25px 13px rgba(105,105,105,0.3);
 }
+/*Corrigir o Logo no GIMP tem muito blank space
+.logo{
+    min-height: 7em;
+    min-width: 10em;
+}
+*/
+#offerAddNewKeyContainer,#offerAddNewSaleContainer{
+    font-size: 1.5em;
+}
+
