--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -14,12 +14,13 @@ body{
     padding: 0;
 }
 #wrapper{
+    padding-top: 20%;
     min-height: 100%;
     background-color: var(--color-background-white);
     position: relative;
 }
 #content{
-    padding-bottom: 20rem;
+    padding-bottom: 5%;
 }
 footer#footerGeneric{
     width: 100%;
@@ -29,7 +30,7 @@ footer#footerGeneric{
     bottom: 0;
     left: 0;
     right: 0;
-    height: 9rem;
+    height: 5%;
 }
 #sidebar{
     height: 100vh;
@@ -37,7 +38,8 @@ footer#footerGeneric{
 }
 /*From template merge*/
 header.navbar{
-    background-color: var(--color-background-dark-blue) !important;
+    background-color: var(--color-background-dark-blue);
+    max-height: 20%;
 }
 .avatar-pic {
     width: 150px;
@@ -171,7 +173,7 @@ header.navbar{
 }
 */
 #checkoutPlaceHolderTop{
-    padding-top: 55%;
+    padding-top: 25%;
 }
 #checkoutStatusEmojiTrue{
     color: var(--color-interactive-green-success);
