--- a/src/styles/constants.css
+++ b/src/styles/constants.css
@@ -18,6 +18,7 @@
     --color-interactive-orange2:#E0920B;
     --color-interactive-red-fail:#FF5A5F;
     --color-interactive-green-success:#2cc36d;
+    --color-interactive-blue:#007bff;
     
     /*background*/
     /*Header+Navbar*/
