--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -8,7 +8,6 @@ html{
 }
 body{
     font-family: 'Montserrat' !important;
-    background-color: var(--color-background-white);
     height: 100%;
     margin:0;
     padding: 0;
@@ -19,22 +18,22 @@ body{
     position: relative;
 }
 #content{
-    padding-top: 10rem;
-    padding-bottom: 10rem;
+    padding-top:12rem;
+    padding-bottom: 12rem;
 }
 header.navbar{
     width: 100%;
     padding:2rem;
 }
-footer#footerGeneric{
-    width: 100%;
-    margin-left: 0px;
-    margin-right: 0px;
+footer{
     position: absolute;
+    width: 100%;
+    height: 11rem;
     bottom: 0;
     left: 0;
     right: 0;
-    padding:2rem;
+    margin-left: 0;
+    margin-right: 0;
 }
 #sidebar{
     height: 100vh;
