--- a/src/styles/progress_bar.css
+++ b/src/styles/progress_bar.css
@@ -5,6 +5,7 @@ ul.progress-bar {
     font-size: 0;
     list-style: none;
 }
+
 li.section {
     display: inline-block;
     padding-top: 45px;
@@ -18,6 +19,7 @@ li.section {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
 li.section:before {
     content: 'x';
     position: absolute;
@@ -32,6 +34,7 @@ li.section:before {
     line-height: 30px;
     background: gray;
 }
+
 .status-bar {
     height: 2px;
     background: gray;
@@ -39,16 +42,23 @@ li.section:before {
     top: 20px;
     margin: 0 auto;
 }
+
 .current-status {
     height: 2px;
     width: 0;
     border-radius: 1px;
     background: mediumseagreen;
 }
+
 @keyframes changeBackground {
-    from {background: gray}
-    to {background: mediumseagreen}
+    from {
+        background: gray
+    }
+    to {
+        background: mediumseagreen
+    }
 }
+
 li.section.visited:before {
     content: '\2714';
     animation: changeBackground .5s linear;
@@ -58,12 +68,15 @@ li.section.visited:before {
 li.section.visited.current:before {
     box-shadow: 0 0 0 2px mediumseagreen;
 }
-.status-bar{
+
+.status-bar {
     width: 50%;
 }
-.status-bar-circle{
+
+.status-bar-circle {
     width: 10%;
 }
-.status-bar-circle:first-of-type{
-    margin-left: 27em;
+
+.status-bar-circle:first-of-type {
+    margin-left: 23em;
 }
