--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -42,6 +42,9 @@ footer{
 /*From template merge*/
 header.navbar{
     background-color: var(--color-background-dark-blue);
+    /*
+    background-color: transparent;
+    */
 }
 .avatar-pic {
     width: 150px;
@@ -215,4 +218,10 @@ header.navbar{
 .cardProductList{
     height: fit-content !important;
     width: 21rem !important;
+}
+.navbar-toggler-icon{
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(235,157,22, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
+}
+#navbarHamburguer{
+    border-color: var(--color-interactive-orange) !important;
 }
