--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,246 +1,193 @@
-@import "./constants.css";
-@import "./progress_bar.css";
-@import "./checkout.css";
-html {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: 'Montserrat' !important;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-#wrapper {
-    min-height: 100%;
-    background-color: var(--color-background-white);
-    position: relative;
-}
-#content{
-    padding-top:8rem;
-    padding-bottom: 12rem;
-}
-header.navbar{
-    width: 100%;
-    padding:2rem;
-}
-footer{
-    position: absolute;
-    width: 100%;
-    height: 12rem;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin-left: 0;
-    margin-right: 0;
-}
-#sidebar{
-    height: 100vh;
-    background-color: var(--color-background-full-white);
-}
-
-
-/*From template merge*/
-header.navbar{
-    background-color: var(--color-background-dark-blue);
-}
-
-.avatar-pic {
-    width: 150px;
-}
-
-.accountDelete-button {
-    margin-top: 50px;
-}
-
-#headerSearchIcon {
-    color: var(--color-interactive-orange);
-    font-size: 1.5rem;
-}
-
-#myAccountIcon {
-    color: var(--color-primary-light-blue);
-}
-
-.headerIcon {
-    font-size: 1.5rem;
-}
-
-#offerPageSellButton {
-    background-color: var(--color-interactive-orange);
-    border-style: none;
-}
-
-#headerSellButton {
-    background-color: var(--color-interactive-orange);
-    border-style: none;
-}
-
-#headerExploreButton {
-    background-color: var(--color-primary-light-blue);
-    border-style: none;
-}
-/* buttons css */ 
-.btn.btn-orange {
-    background-color: var(--color-interactive-orange);
-}
-.btn.btn-orange:hover {
-    background-color: var(--color-interactive-orange2);
-}
-
-
-/* color css */
-
-.cl-orange {
-    color: var(--color-interactive-orange);
-}
-
-.cl-orange2 {
-    color: var(--color-interactive-orange2);
-}
-
-.cl-green {
-    color: var(--color-accent-green);
-}
-
-.cl-blue {
-    color: var(--color-background-dark-blue);
-}
-
-.cl-success {
-    color: var(--color-interactive-green-success);
-}
-.cl-fail {
-    color: var(--color-interactive-red-fail);
-}
-
-.cl-white {
-    color: var(--color-background-white);
-}
-
-
-/* backgrounds css */
-
-.bg-orange {
-    background-color: var(--color-interactive-orange);
-}
-
-.bg-green {
-    background-color: var(--color-accent-green);
-}
-
-.bg-success {
-    background-color: var(--color-interactive-green-success);
-}
-
-.bg-insucess {
-    background-color: var(--color-interactive-red-fail);
-}
-
-.bg-white {
-    background-color: var(--color-background-white);
-}
-
-
-/* cards css */
-
-.card {
-    border-radius: 0;
-    -webkit-box-shadow: 0px 0px 12px 4px rgba(122, 122, 122, 0.24);
-    -moz-box-shadow: 0px 0px 12px 4px rgba(122, 122, 122, 0.24);
-    box-shadow: 0px 0px 12px 4px rgba(122, 122, 122, 0.24);
-    background-color: var(--color-background-white);
-    padding: 0;
-}
-
-.card:hover {
-    -webkit-box-shadow: 0px 0px 25px 13px rgba(105, 105, 105, 0.69);
-    -moz-box-shadow: 0px 0px 25px 13px rgba(105, 105, 105, 0.69);
-    box-shadow: 0px 0px 25px 13px rgba(105, 105, 105, 0.3);
-}
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
-/*Corrigir o Logo no GIMP tem muito blank space */
-.logo{
-}
-#offerAddNewKeyContainer,#offerAddNewSaleContainer{
-    font-size: 1.5em;
-}
-
-#loginLogo {
-    max-width: 2em;
-    max-height: 2em;
-    background-color: wheat;
-}
-
-
-/*
+    @import "./constants.css";
+    @import "./progress_bar.css";
+    @import "./checkout.css";
+    html {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    
+    body {
+        font-family: 'Montserrat' !important;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    
+    #wrapper {
+        min-height: 100%;
+        background-color: var(--color-background-white);
+        position: relative;
+    }
+    
+    #content {
+        padding-top: 0rem;
+        padding-bottom: 0rem;
+    }
+    
+    header.navbar {
+        width: 100%;
+        padding: 2rem;
+    }
+    
+    footer {
+        position: absolute;
+        width: 100%;
+        height: 12rem;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    
+    #sidebar {
+        height: 100vh;
+        background-color: var(--color-background-full-white);
+    }
+    /*From template merge*/
+    
+    header.navbar {
+        background-color: var(--color-background-dark-blue);
+    }
+    
+    .avatar-pic {
+        width: 150px;
+    }
+    
+    .accountDelete-button {
+        margin-top: 50px;
+    }
+    
+    #headerSearchIcon {
+        color: var(--color-interactive-orange);
+        font-size: 1.5rem;
+    }
+    
+    .headerIcon {
+        font-size: 1.5rem;
+    }
+    
+    #offerPageSellButton {
+        background-color: var(--color-interactive-orange);
+        border-style: none;
+    }
+    
+    #headerSellButton {
+        background-color: var(--color-interactive-orange);
+        border-style: none;
+    }
+    /* buttons css */
+    
+    .btn.btn-orange {
+        background-color: var(--color-interactive-orange);
+    }
+    
+    .btn.btn-orange:hover {
+        background-color: var(--color-interactive-orange2);
+    }
+    /* color css */
+    
+    .cl-orange {
+        color: var(--color-interactive-orange);
+    }
+    
+    .cl-orange2 {
+        color: var(--color-interactive-orange2);
+    }
+    
+    .cl-green {
+        color: var(--color-accent-green);
+    }
+    
+    .cl-blue {
+        color: var(--color-background-dark-blue);
+    }
+    
+    .cl-success {
+        color: var(--color-interactive-green-success);
+    }
+    
+    .cl-fail {
+        color: var(--color-interactive-red-fail);
+    }
+    
+    .cl-white {
+        color: var(--color-background-white);
+    }
+    /* backgrounds css */
+    
+    .bg-orange {
+        background-color: var(--color-interactive-orange);
+    }
+    
+    .bg-green {
+        background-color: var(--color-accent-green);
+    }
+    
+    .bg-success {
+        background-color: var(--color-interactive-green-success);
+    }
+    
+    .bg-insucess {
+        background-color: var(--color-interactive-red-fail);
+    }
+    
+    .bg-white {
+        background-color: var(--color-background-white);
+    }
+    /* cards css */
+    
+    .card {
+        border-radius: 0;
+        -webkit-box-shadow: 0px 0px 12px 4px rgba(122, 122, 122, 0.24);
+        -moz-box-shadow: 0px 0px 12px 4px rgba(122, 122, 122, 0.24);
+        box-shadow: 0px 0px 12px 4px rgba(122, 122, 122, 0.24);
+        background-color: var(--color-background-white);
+        padding: 0;
+    }
+    
+    .card:hover {
+        -webkit-box-shadow: 0px 0px 25px 13px rgba(105, 105, 105, 0.69);
+        -moz-box-shadow: 0px 0px 25px 13px rgba(105, 105, 105, 0.69);
+        box-shadow: 0px 0px 25px 13px rgba(105, 105, 105, 0.3);
+    }
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
+    /*Corrigir o Logo no GIMP tem muito blank space */
+    
+    .logo {}
+    
+    #offerAddNewKeyContainer,
+    #offerAddNewSaleContainer {
+        font-size: 1.5em;
+    }
+    
+    #loginLogo {
+        max-width: 2em;
+        max-height: 2em;
+        background-color: wheat;
+    }
+    /*
 .cartProductImage{
 
 }
