--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -22,7 +22,7 @@
     
     #content {
         padding-top: 0rem;
-        padding-bottom: 0rem;
+        padding-bottom: 10rem;
     }
     
     header.navbar {
@@ -31,7 +31,7 @@
     }
     
     footer {
-        position: absolute;
+        position: relative;
         width: 100%;
         height: 12rem;
         bottom: 0;
