--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -263,3 +263,20 @@ header.navbar {
 #navbarHamburguer .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(235,157,22, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
+#navbar .breadcrumb{
+    padding: 0;
+    margin: 0;
+    background-color: transparent;
+}
+#navbar{
+    position: relative;
+    min-height: 1rem;
+}
+#breadcrumbContainer{
+    position: absolute;
+    left: 1.5rem;
+    top: 0.5rem;
+}
+#breadcrumbContainer a{
+    color: var(--color-primary-light-blue);
+}
