--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -22,7 +22,7 @@ html body {
 
 #content {
     padding-top: 0rem;
-    padding-bottom: 3rem;
+    padding-bottom: 15rem;
 }
 
 header.navbar {
@@ -31,7 +31,7 @@ header.navbar {
 }
 
 footer {
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 12rem;
     bottom: 0;
