--- a/src/styles/progress_bar.css
+++ b/src/styles/progress_bar.css
@@ -9,7 +9,7 @@ ul.progress-bar {
 li.section {
     display: inline-block;
     padding-top: 45px;
-    font-size: 13px;
+    /*font-size: 13px;*/
     font-weight: bold;
     line-height: 16px;
     color: gray;
