--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -100,14 +100,12 @@ header.navbar {
     background-color: var(--color-interactive-orange2);
 }
 .btn.btn-blue {
-    background-color: white;
+    background-color: inherit;
     border: solid 1px var(--color-background-dark-blue);
     color: var(--color-background-dark-blue);
 }
 
 .btn.btn-blue:hover {
-    background-color: white;
-    color: var(--color-background-dark-blue);
     background-color: var(--color-background-dark-blue);
     color: white;
 }
