--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -226,11 +226,6 @@ header.navbar {
     top: 0;
     z-index: 1;
 }
-
-#checkoutPlaceHolderTop {
-    padding-top: 25%;
-}
-
 #checkoutStatusEmojiTrue {
     color: var(--color-interactive-green-success);
     /*font-size: 4.5em;*/
@@ -248,8 +243,8 @@ header.navbar {
 }
 
 #checkoutStatusButton {
-    background-color: gray;
-    border-color: gray;
+    background-color: var(--color-interactive-green-success);
+    border-color: transparent;
 }
 
 #sidebar .showAllProductListSideBar {
@@ -428,4 +423,8 @@ header.navbar {
 #checkoutButtonsContainer .checkoutBackButton{
     background-color: var(--color-primary-light-blue);
     border-color: transparent;
+}
+#checkoutButtonsContainer{
+    font-size: 4em;
+    height: 50vmax;
 }
