--- a/src/styles/feedback.css
+++ b/src/styles/feedback.css
@@ -1,6 +1,8 @@
 .active-border {
-    border-bottom: 0.2em solid var(--color-background-dark-blue);
+    cursor: pointer;
+    border-bottom: 0.2em solid var(--color-interactive-orange);
 }
 .inactive-border:hover {
+    cursor: pointer;
     border-bottom: 0.2em solid var(--color-primary-light-blue);
 }
