--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -55,9 +55,6 @@ footer {
     background-color: var(--color-background-full-white);
 }
 
-
-/*From template merge*/
-
 header.navbar {
     background-color: var(--color-background-dark-blue);
 }
@@ -89,111 +86,7 @@ header.navbar {
     border-style: none;
 }
 
-
-/* buttons css */
-
-.btn.btn-orange {
-    background-color: var(--color-interactive-orange);
-}
-
-.btn.btn-orange:hover {
-    background-color: var(--color-interactive-orange2);
-}
-
-.btn.btn-blue {
-    background-color: inherit;
-    border: solid 1px var(--color-background-dark-blue);
-    color: var(--color-background-dark-blue);
-}
-
-.btn.btn-blue:hover {
-    background-color: var(--color-background-dark-blue);
-    color: white;
-}
-.btn.btn-blue-full {
-    background-color: var(--color-background-dark-blue);
-    color: white;
-
-}
-
-
-/* color css */
-
-.cl-orange {
-    color: var(--color-interactive-orange);
-}
-
-.cl-orange2 {
-    color: var(--color-interactive-orange2);
-}
-
-.cl-green {
-    color: var(--color-accent-green);
-}
-
-.cl-blue {
-    color: var(--color-background-dark-blue);
-}
-
-.cl-success {
-    color: var(--color-interactive-green-success);
-}
-
-.cl-fail {
-    color: var(--color-interactive-red-fail);
-}
-
-.cl-white {
-    color: var(--color-background-white);
-}
-
-.hv-orange {}
-
-
-/* backgrounds css */
-
-.bg-orange {
-    background-color: var(--color-interactive-orange);
-}
-
-.bg-green {
-    background-color: var(--color-accent-green);
-}
-
-.bg-success {
-    background-color: var(--color-interactive-green-success);
-}
-
-.bg-insucess {
-    background-color: var(--color-interactive-red-fail);
-}
-
-.bg-white {
-    background-color: var(--color-background-white);
-}
-
-
-/* cards css */
-
-.card {
-    border-radius: 0;
-    -webkit-box-shadow: 0px 0px 12px 4px rgba(122, 122, 122, 0.24);
-    -moz-box-shadow: 0px 0px 12px 4px rgba(122, 122, 122, 0.24);
-    box-shadow: 0px 0px 12px 4px rgba(122, 122, 122, 0.24);
-    background-color: var(--color-background-white);
-    padding: 0;
-}
-
-.card:hover {
-    -webkit-box-shadow: 0px 0px 25px 13px rgba(105, 105, 105, 0.69);
-    -moz-box-shadow: 0px 0px 25px 13px rgba(105, 105, 105, 0.69);
-    box-shadow: 0px 0px 25px 13px rgba(105, 105, 105, 0.3);
-}
-
-
 /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
-
-
 /* meter isto noutra pag css visto que common e sp para o que tem em todas as pasgs */
 
 #offerAddNewKeyContainer,
@@ -362,20 +255,6 @@ header.navbar {
     border: none;
 }
 
-
-/*******************************
-* MODAL AS LEFT/RIGHT SIDEBAR
-* Add "left" or "right" in modal parent div, after class="modal".
-* Get free snippets on bootpen.com
-*******************************/
-
-
-/*******************************
-* MODAL AS LEFT/RIGHT SIDEBAR
-* Add "left" or "right" in modal parent div, after class="modal".
-* Get free snippets on bootpen.com
-*******************************/
-
 #sideBarFilterResponsive .modal.left .modal-dialog {
     position: fixed;
     margin: auto;
@@ -395,9 +274,6 @@ header.navbar {
 #sideBarFilterResponsive .modal.left .modal-body {
     padding: 15px 15px 80px;
 }
-
-
-/*Left*/
 
 #sideBarFilterResponsive .modal.left.fade .modal-dialog {
     left: 0px;
@@ -430,3 +306,60 @@ header.navbar {
 #formCheckout{
     width: 80%;
 }
+
+/* buttons css */
+.btn.btn-orange {
+    background-color: var(--color-interactive-orange);
+}
+.btn.btn-orange:hover {
+    background-color: var(--color-interactive-orange2);
+}
+.btn.btn-blue {
+    background-color: inherit;
+    border: solid 1px var(--color-background-dark-blue);
+    color: var(--color-background-dark-blue);
+}
+.btn.btn-blue:hover {
+    background-color: var(--color-background-dark-blue);
+    color: white;
+}
+.btn.btn-blue-full {
+    background-color: var(--color-background-dark-blue);
+    color: white;
+}
+
+/* cards css */
+.card {
+    border-radius: 0;
+    -webkit-box-shadow: 0px 0px 12px 4px rgba(122, 122, 122, 0.24);
+    -moz-box-shadow: 0px 0px 12px 4px rgba(122, 122, 122, 0.24);
+    box-shadow: 0px 0px 12px 4px rgba(122, 122, 122, 0.24);
+    background-color: var(--color-background-white);
+    padding: 0;
+}
+.card:hover {
+    -webkit-box-shadow: 0px 0px 25px 13px rgba(105, 105, 105, 0.69);
+    -moz-box-shadow: 0px 0px 25px 13px rgba(105, 105, 105, 0.69);
+    box-shadow: 0px 0px 25px 13px rgba(105, 105, 105, 0.3);
+}
+
+/* color css */
+.cl-orange { color: var(--color-interactive-orange); }
+.cl-orange2 { color: var(--color-interactive-orange2); }
+.cl-green { color: var(--color-accent-green); }
+.cl-blue { color: var(--color-background-dark-blue); }
+.cl-success { color: var(--color-interactive-green-success); }
+.cl-fail { color: var(--color-interactive-red-fail); }
+.cl-white { color: var(--color-background-white); }
+/* backgrounds css */
+.bg-orange { background-color: var(--color-interactive-orange); }
+.bg-green { background-color: var(--color-accent-green); }
+.bg-success { background-color: var(--color-interactive-green-success); }
+.bg-insucess { background-color: var(--color-interactive-red-fail); }
+.bg-white { background-color: var(--color-background-white); }
+
+/* scrollable table */
+.tableFixHead           { overflow-y: auto; height: 42rem; }
+.tableFixHead thead th  { position: sticky; top: 0; }
+.tableFixHead table     { border-collapse: collapse; width: 100%; height: 600px; }
+.tableFixHead th, td    { padding: 8px 16px; }
